<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>controller_manager</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="pedroariasperez96@gmail.com">parias</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pluginlib</depend>
  <depend>as2_core</depend>
  <depend>rclcpp</depend>
  <depend>as2_msgs</depend>
  <depend>yaml-cpp</depend>
  <depend>as2_control_command_handlers</depend>
  <depend>controller_plugin_base</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>trajectory_msgs</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
